--- a/src/assets/sass/blocks/map.scss
+++ b/src/assets/sass/blocks/map.scss
@@ -1,6 +1,6 @@
 .map {
     position: relative;
-    //background-image: url(../images/map.png);
+    background-image: url(../../images/map.png);
     background-repeat: no-repeat;
     background-position: 0 0;
     background-size: 100%;
