--- a/src/assets/sass/blocks/text.scss
+++ b/src/assets/sass/blocks/text.scss
@@ -1,5 +1,5 @@
 .text {
-    //background-image: url(../images/blurBg.jpg);
+    background-image: url(../../images/blurBg.jpg);
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: cover;
