--- a/src/assets/sass/blocks/header.scss
+++ b/src/assets/sass/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+    background-image: url(../../images/bg.jpg);
     background-position: 50% 0;
     background-size: cover;
     background-repeat: no-repeat;
