--- a/src/assets/sass/_style.scss
+++ b/src/assets/sass/_style.scss
@@ -1,12 +1,12 @@
-@import 'global/variables';
-@import 'global/mixins';
-@import 'global/fonts';
-@import '../../../node_modules/normalize.css/normalize';
-@import 'global/main';
-@import 'blocks/header';
-@import 'blocks/catalog';
-@import 'blocks/text';
-@import 'blocks/stages';
-@import 'blocks/map';
-@import 'blocks/footer';
-@import 'blocks/create';
+@import "global/variables.scss";
+@import "global/mixins.scss";
+@import "global/fonts.scss";
+@import "../../../node_modules/normalize.css/normalize";
+@import "global/main.scss";
+@import "blocks/header.scss";
+@import "blocks/catalog.scss";
+@import "blocks/text.scss";
+@import "blocks/stages.scss";
+@import "blocks/map.scss";
+@import "blocks/footer.scss";
+@import "blocks/cart.scss";
