--- a/src/assets/sass/global/main.scss
+++ b/src/assets/sass/global/main.scss
@@ -1,22 +1,22 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-family: 'Gilroy Light', serif;
-    font-size: 20px;
-    line-height: 1.2;
+  font-family: "Gilroy Light", serif;
+  font-size: 20px;
+  line-height: 1.2;
 }
 
-a { 
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 .container {
-    @include container
+  @include container;
 }
