--- a/src/assets/sass/blocks/cart.scss
+++ b/src/assets/sass/blocks/cart.scss
@@ -1,28 +1,6 @@
 .cart {
   .cart__title-row {
     position: relative;
-
-    .cart__close {
-      position: absolute;
-      right: 0;
-      top: 0;
-      width: 30px;
-      height: 2px;
-      background-color: #000;
-      transform: rotate(-45deg);
-      border: none;
-
-      &::before {
-        content: "";
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 30px;
-        height: 2px;
-        background-color: #000;
-        transform: rotate(90deg);
-      }
-    }
   }
 
   &__btn-icon {
@@ -56,9 +34,13 @@
   }
 
   &__list {
+    position: absolute;
     width: 50%;
     padding: 20px 15px;
+    right: 50px;
+    top: 100px;
     border-radius: 10px;
+    z-index: 998;
     background-color: #fff;
     box-shadow: 0 0 5px 0 #000;
   }
@@ -81,11 +63,15 @@
   }
   .cart__item-all-price {
     margin-right: 30px;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .cart__item-number {
     padding: 5px;
     width: 40px;
+    margin-right: 10px;
+    margin-left: 10px;
     display: inline-block;
   }
 
@@ -178,22 +164,101 @@ input[type="number"]::-webkit-inner-spin-button {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  overflow-x: auto;
 }
 
 .basket-close {
-  position: fixed;
-  top: 10px;
-  right: 10px;
+  position: absolute;
+  right: 85px;
+  top: 126px;
+  width: 30px;
+  height: 2px;
+  background-color: #000;
+  transform: rotate(-45deg);
+  border: none;
+  z-index: 999;
+
+  &::before {
+    content: "";
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 30px;
+    height: 2px;
+    background-color: #000;
+    transform: rotate(90deg);
+  }
 }
 
 .cart__item-info {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+@media (max-width:$tablet) {
+  .cart {
+
+    .cart__item-all-price {
+      margin-right: 20px;
+    }
+
+    .basket-close {
+      right: 25px;
+    }
+
+
+    input {
+      padding: 5px;
+      width: 50%;
+    }
+
+    textarea {
+      resize: none;
+      padding: 5px;
+      width: 50%;
+    }
+
+    &__list {
+      width: 95%;
+      right: 0;
+      left: 0;
+      padding: 15px 5px;
+      margin: auto;
+    }
+
+    .cart__item-img {
+      width: 20vw;
+      margin-right: 10px;
+    }
+
+    .cart__item-description {
+      margin-right: 15px;
+    }
+
+    .cart__item-count{
+      margin-right: 10px;
+    }
+    .cart__item-name {
+      font-size: 15px;
+    }
+    .cart__item-number {
+      width: 25px;
+      text-align: center;
+    }
+    .cart__item-count {
+      display: flex;
+    }
+    .cart__item-add {
+      padding: 10px 5px;
+    }
+
+    .cart__btn-icon {
+      bottom: 30px;
+      right: 30px;
+    }
+  }
 }
