--- a/src/assets/sass/blocks/cart.scss
+++ b/src/assets/sass/blocks/cart.scss
@@ -161,11 +161,12 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .basket {
+  z-index: 10000;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.6);
   overflow-x: auto;
 }
