--- a/src/assets/sass/blocks/catalog.scss
+++ b/src/assets/sass/blocks/catalog.scss
@@ -34,6 +34,7 @@
 
     &-img {
       width: 100%;
+       height: auto;
       margin-bottom: 10px;
       background-color: rgb(201, 201, 201);
     }
