--- a/src/assets/sass/blocks/catalog.scss
+++ b/src/assets/sass/blocks/catalog.scss
@@ -20,6 +20,9 @@
   }
 
   &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 260px;
     margin-right: 33.3px;
     background-color: #393939;
@@ -41,8 +44,6 @@
 
     &-text {
       color: #fff;
-      padding-right: 15px;
-      padding-left: 15px;
     }
 
     &-name {
