--- a/src/assets/sass/blocks/catalog.scss
+++ b/src/assets/sass/blocks/catalog.scss
@@ -21,6 +21,7 @@
 
   &__item {
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     align-items: center;
     width: 260px;
