--- a/src/assets/sass/blocks/catalog.scss
+++ b/src/assets/sass/blocks/catalog.scss
@@ -38,7 +38,7 @@
 
     &-img {
       width: 100%;
-      height: auto;
+      height: 260px;
       margin-bottom: 10px;
       background-color: rgb(201, 201, 201);
     }
