--- a/src/assets/sass/blocks/header.scss
+++ b/src/assets/sass/blocks/header.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   padding-top: 20px;
   min-height: 600px;
+  background-attachment: fixed;
 
   &__row {
     display: flex;
